--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 axum = { version = "0.5.1", features = ["ws"] }
 axum-server = { version = "0.4.0", features = ["tls-rustls"] }
 base64 = "0.13.0"
+crossbeam-channel = "0.5"
 futures = "0.3.21"
 http = "0.2.6"
 rand = "0.8.5"
