--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+aws-config = "0.54.1"
+aws-sdk-polly = "0.24.0"
 axum = { version = "0.5.1", features = ["ws"] }
 axum-server = { version = "0.4.0", features = ["tls-rustls"] }
 base64 = "0.13.0"
