--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ http = "0.2.6"
 rand = "0.8.5"
 serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.79"
+structopt = "0.3.26"
 tokio = { version = "1.17.0", features = ["macros", "rt", "rt-multi-thread"] }
 tokio-tungstenite = { version = "0.15.0", features = ["native-tls"] }
 tungstenite = "0.14.0"
